Running another series of tests for garbage collector